Added random color changer to remark_datastore.py, changed h1 in chat.html

--- a/chat.html
+++ b/chat.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
-{% autoescape true %}
 <html>
-  <head>
     <title>PEP Chat Demo</title>
     <link href='/css/style.css' rel='stylesheet' type='text/css'>
     <script src="/js/ajax.js"></script>
   </head>
 
   <body>
-    <h1>PEP Chat Demo</h1>
+    <h1>PEP Chat Demo-change</h1>
     <div id="chat-window"></div>
     <input
         id="remark-input"
